--- a/arduino-ide-extension/package.json
+++ b/arduino-ide-extension/package.json
@@ -156,7 +156,11 @@
   ],
   "arduino": {
     "cli": {
-      "version": "0.24.0"
+      "version": {
+        "owner": "cmaglie",
+        "repo": "arduino-cli",
+        "commitish": "skip_lib_search_result"
+      }
     },
     "fwuploader": {
       "version": "2.2.0"
