--- a/arduino-ide-extension/package.json
+++ b/arduino-ide-extension/package.json
@@ -169,7 +169,11 @@
       "version": "14.0.0"
     },
     "languageServer": {
-      "version": "0.6.0"
+      "version":  {
+        "owner": "arduino",
+        "repo": "arduino-language-server",
+        "commitish": "speed_improvements"
+      }
     }
   }
 }
