Use another LS fork.
Signed-off-by: Akos Kitta <a.kitta@arduino.cc>

--- a/arduino-ide-extension/package.json
+++ b/arduino-ide-extension/package.json
@@ -170,9 +170,9 @@
     },
     "languageServer": {
       "version":  {
-        "owner": "arduino",
+        "owner": "kittaakos",
         "repo": "arduino-language-server",
-        "commitish": "speed_improvements"
+        "commitish": "full-rebuild"
       }
     }
   }
